host on goodle drive

--- a/AvailableDocSets.plist
+++ b/AvailableDocSets.plist
@@ -51,7 +51,7 @@
 			<key>name</key>
 			<string>SciPy-docs.docset</string>
 			<key>URL</key>
-			<string>https://www.dropbox.com/s/51l4nup2zltby5k/SciPy-docs.docset.zip</string>
+			<string>https://googledrive.com/host/0B-2OwL-pFXT_ZnhvTjd3cDdGZWM/SciPy-docs.docset.zip</string>
 		</dict>
 		<dict>
 			<key>title</key>
