--- a/AvailableDocSets.plist
+++ b/AvailableDocSets.plist
@@ -41,7 +41,7 @@
 			<key>title</key>
 			<string>Numpy</string>
 			<key>name</key>
-			<string>nump-html.docset</string>
+			<string>numpy-html.docset</string>
 			<key>URL</key>
 			<string>https://googledrive.com/host/0B-2OwL-pFXT_ZnhvTjd3cDdGZWM/numpy-html.zip</string>
 		</dict>
