--- a/AvailableDocSets.plist
+++ b/AvailableDocSets.plist
@@ -43,7 +43,7 @@
 			<key>name</key>
 			<string>numpy-html.docset</string>
 			<key>URL</key>
-			<string>https://googledrive.com/host/0B-2OwL-pFXT_ZnhvTjd3cDdGZWM/numpy-html.zip</string>
+			<string>https://googledrive.com/host/0B-2OwL-pFXT_ZnhvTjd3cDdGZWM/numpy-html.docset.zip</string>
 		</dict>
 		<dict>
 			<key>title</key>
